compiler/testData/cli/jvm/annotatedParameterWithoutName.out
compiler/testData/cli/jvm/annotatedParameterWithoutName.kt:5:13: error: syntax error: Expecting a parameter declaration.
fun foo(@Ann) = ""
            ^
COMPILATION_ERROR
