compiler/testData/cli/jvm/annotatedParameterWithoutName.kt
// ISSUE: KT-75831

annotation class Ann

fun foo(@Ann) = ""
